# grpc_simple_chat

./: README.md  blog.md
apps/golang_client/: go.mod  go.sum  main.go
apps/golang_client/proto/: chat_grpc.pb.go
apps/python_client/: __main__.py  pyproject.toml
apps/python_client/proto/: __init__.py  chat_pb2.py  chat_pb2_grpc.py
apps/server/: go.mod  main.go
apps/server/proto/: chat.pb.go
protos/: chat.proto
